@@ -1,4 +1,4 @@
 DIST andlso.ttf 158956 SHA256 29eedc86c06288ac5c3786cff85b1de3fa320e172eba267df46c50dd70b30999 SHA512 085da209e4927c8ad5635a71e720e136b4e699cb8d9a0122bfc9911bf46c65f1404b842538395549fa9ce0ade15f9e425ccb80011799453f2a93f8f3469594c1 WHIRLPOOL c7599cc53c6b4e32b500a4c71d2b646b8ede872847e8a8f69c3a88964008dbd62bde12765e8978de24f7b722161e009665d060864eb25fa3eb3a2360ad66ff88
-EBUILD andalus-1-r1.ebuild 617 SHA256 20836c02a67f5f16c496a77b4fb4465bc636a52d5979f241ac382d07af158e27 SHA512 e51e231dfcc52113a0ef343d8c387eb1e0856b3b09e072fec763bc700851875ed9b97b95c63e1dd6c575a4b243d36a3a65dbfed28f2190656faa8c36ad86cc30 WHIRLPOOL 7d2c11553c2e63347d75cc4328705c5bd836780560225953770e1ee149038cb3308678712ba5b7fa8bdf64d781b12c3e811763b1e0bc96e2559dcb70419ea8d0
-MISC ChangeLog 82 SHA256 12ed3543adc88564630b15553233b47b2bf04f4acc8f97eeb5c5befa2c16c75b SHA512 bf31a0cd9c7f4c2b560ef6cd2174e927933d1004c8fab2089e1d0d8c8d76f26f449f9babd33b72176038868259296cd4dda9db0b9cb175274e98fff888290703 WHIRLPOOL f7606de1e805cc293c25b9538e2fd7433ed4cd076bf7e047d7583e4e3886de1a365fe6b1e75bbcbd80f8d4da4a74ec3259d9914462a80ac75e9537dca5c9e52f
+EBUILD andalus-1-r1.ebuild 586 SHA256 1c45b3c535faf0370919f7b355e4b0ee02a790cb192b061a4a3e0caf52cd35bc SHA512 8f09f3e1bea9491d792521434e4666c06b3280539a89cba21dddc8bcd28cc3f2f2c3cbe989a5cad4655ddd2e7062fd7a426ff327bcf6ddd99b65d19c7afa01b8 WHIRLPOOL 354e7d0de0284b569ae460db639c4e156089600b55da7d947411bfc0179ede1db8471133f93f0669715218f092a8b4162ff87e958a99cfd71dfb3111eb1df1ee
+MISC ChangeLog 198 SHA256 6da394f19c69e10d3bcfeb9531a9072fae760e9abe3ae7c4b7d1cb97e14a40c5 SHA512 f9d11183078aab1c85dbe53c4c433876f778e475e9564b0a4087ce68cde9bbc372b86475bfd631665cc6763353ed3235bb928bf4bb5938867675e86b93f85cb7 WHIRLPOOL c842af02b26874cabac2df571d69e28551ea15380ed18b84e03266ef1ef979e178d491d261803e7cf5c29c3790ec3d7ab76678397fa8ec21c7323a13dbc1bf13
 MISC metadata.xml 234 SHA256 f35b97f99a26d73cc441e1d93bfe25aaa4e9f7f6d90c8d05a74f7b7bc5b68472 SHA512 59d8156b3ca3e99c40d5a2a32de7edf2eb53279b2424998862589d6bad77617d23fc852afec0a92f8ac5bb54a88ebc504cc0641029c1936412e90ab03dfdd447 WHIRLPOOL 935a1401910a42f888c991e443a49275ea8b87976c5aa977f670053d97d18754231749749bc92d37d4b5f45ecf65914480942a11b5827b6c08fb24313a428431
