@@ -1,8 +1,8 @@
-# Copyright 1999-2015 Gentoo Foundation
+# Copyright 1999-2016 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Id$
 
-EAPI="5"
+EAPI="6"
 
 inherit font
 
@@ -27,7 +27,3 @@ pkg_nofetch() {
 	einfo "Please download ${MY_P} from here:"
 	einfo "http://fontzone.net/font-download/andalus"
 }
-
-#src_unpack() {
-#	unzip $A
-#}
